--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title:       Pixyll
-email:       your_email@example.com
-author:      John Otander
-description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
+title:       Robotics Blog
+email:       ___
+author:      Emir Ljuca
+description: "blah blah blah."
 baseurl:     ""
-url:         "http://pixyll.com"
+url:         "https://emirljuca.github.io"
 date_format: "%b %-d, %Y"
 header_pages:
  - about.md
