--- a/manifest.json
+++ b/manifest.json
@@ -7,13 +7,13 @@ layout: null
   "description": "{{ site.description | replace: '"', '\"' }}",
   "icons": [
     {
-      "src": "{{ '/splash-512x512.png' | relative_url }}",
-      "type": "image/png",
+      "src": "{{ '/splash-512x512.gif' | relative_url }}",
+      "type": "image/gif",
       "sizes": "512x512"
     },
     {
-      "src": "{{ '/favicon-192x192.png' | relative_url }}",
-      "type": "image/png",
+      "src": "{{ '/favicon-192x192.gif' | relative_url }}",
+      "type": "image/gif",
       "sizes": "192x192"
     }
   ],
