--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ bing_verification:
 
 # Optional features
 animated:             true
-show_related_posts:   false
-show_post_footers:    false
+show_related_posts:   true
+show_post_footers:    true
 show_social_icons:    true
 ajaxify_contact_form: false
 enable_mathjax: false
@@ -42,7 +42,7 @@ disqus_shortname:
 
 # Facebook Comments plugin
 # (leave blank to disable Facebook Comments, otherwise set it to true)
-facebook_comments:
+facebook_comments: true
 facebook_appid:
 facebook_comments_number: 10
 
@@ -50,7 +50,7 @@ facebook_comments_number: 10
 github_username: emirljuca
 reddit_username: emirljuca
 bitbucket_username:
-stackoverflow_id: Interlooper
+stackoverflow_id: 5091380/interlooper
 twitter_username:
 skype_username:
 steam_nickname:
@@ -65,17 +65,17 @@ telegram_username:
 vk_id:
 
 # Post sharing icons
-show_sharing_icons: false
+show_sharing_icons: true
 # Change to 'true' to enable individual icons
-share_facebook: false
-share_twitter: false
+share_facebook: true
+share_twitter: true
 share_googleplus: false
-share_linkedin: false
+share_linkedin: true
 share_digg: false
 share_tumblr: false
-share_reddit: false
+share_reddit: true
 share_stumbleupon: false
-share_hackernews: false
+share_hackernews: true
 
 text:
   pagination:
